--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
    display: flex;
    justify-content: center;
@@ -6,10 +7,7 @@
    background: rgb(136,226,59);
    background: radial-gradient(circle, rgba(136,226,59,1) 41%, rgba(4,60,110,1) 80%, rgba(0,0,0,1) 79%);
 }
-.padre-card{
-   display: flex;
-   justify-content: center;
-}
+
 .btn{
    text-decoration: none;
 }
@@ -17,13 +15,15 @@
    text-decoration: none;
    color: white;
 }
+
 .nav{
-   margin: 10px;
+   padding: 10px;
    display: flex;
    justify-content: space-around;
+   background-color: #83e28932;
 }
 button {
-   background-color: #4CAF50;
+   background-color: #4caf4f39;
    color: white;
    border: none;
    border-radius: 1px;
@@ -37,7 +37,16 @@ button {
  button:active {
    background-color: #3e8e41;
  }
+ .padre-card{
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   /* width: 100%;  */
+}
 .card{
+   flex: 0 0 calc(33.33% - 10px);
+   min-width: 200px; 
+   margin: 5px;
    -webkit-box-shadow: 14px -8px 26px -7px rgba(161,146,161,1);
    -moz-box-shadow: 14px -8px 26px -7px rgba(161,146,161,1);
    box-shadow: 14px -8px 26px -7px rgba(161,146,161,1);
@@ -46,7 +55,6 @@ button {
    font-size: .5rem;
    border: 2px solid rgba(21, 6, 43, 0.496);
    border-radius: 20px;
-   width: 20%;
    height: 500px;
    background: rgb(136,226,59);
    background: radial-gradient(circle, rgba(136,226,59,1) 41%, rgba(4,60,110,1) 46%, rgba(0,0,0,1) 79%);
@@ -54,8 +62,30 @@ button {
 }
 .card img{
    border-radius: 20px;
-   width:100% ;
+   width: 100%;
 }
 .img-about{
    height: 650px;
+}
+.padre-form{
+   display: flex;
+   justify-content: center;
+}
+form img{
+   position: relative;
+   height: 300px;
+   width: 300px;
+   border-radius: 100%;
+}
+form{
+   color: white;
+   width: 300px;
+   height: 500px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   border: 2px solid #949292;
+   padding: 10px;
+   margin: 10px;
+   background-color: rgba(153, 164, 140, 0.269);
 }
