--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,6 +1,7 @@
 .container {
   display: inline-block; 
   margin-right: 20px; 
+  margin-top: 60px;
 }
 .component {
   box-sizing: border-box;
@@ -16,20 +17,22 @@
   border-radius: 20px;
   border: 5px solid transparent;
   background: linear-gradient(black, black) padding-box,
-  linear-gradient(45deg, #FF52E5, #F6D242) border-box;
+  linear-gradient(45deg, #3b443b, #72f642) border-box;
 }
 
 .component:hover {
-  box-shadow: 3px 3px 20px #FF52E5, -3px -3px 20px #d242f6;
+  cursor: pointer;
+  box-shadow: 3px 3px 20px #1a1b1a, -3px -3px 20px #2b2f29;
 }
 
 .favorite {
   background: linear-gradient(black, black) padding-box,
-  linear-gradient(45deg, rgb(155, 0, 227), rgb(200, 47, 255)) border-box;
+  linear-gradient(45deg, #3b443b, #72f642) border-box;
 }
 
 .favorite:hover {
-  box-shadow: 3px 3px 20px rgb(227, 0, 174), -3px -3px 20px rgb(255, 47, 106);
+  cursor: pointer;
+  box-shadow: 3px 3px 20px #1a1b1a, -3px -3px 20px #2b2f29;
 }
 
 .id {
@@ -45,7 +48,7 @@
   align-self: center;
   margin: 0;
   padding: 0;
-  color: aqua;
+  color: rgb(255, 255, 255);
 }
 
 .image {
@@ -59,7 +62,7 @@
   width: 130px;
   height: 130px;
   border-radius: 50%;
-  border: 3px solid gray;
+  border: 3px solid rgb(156, 219, 56);
   padding: 3px;
   transition: 200ms;
 }
@@ -130,7 +133,7 @@
 }
 
 .Value {
-  color: aqua;
+  color: rgb(255, 255, 255);
 }
 
 .masInfo {
