--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,3 +1,5 @@
+
+
 .footer {
   color: grey;
   width: 100%;
@@ -7,4 +9,7 @@
   justify-self: center;
   align-self:flex-end;
   background-color: rgb(35, 35, 35);
+}
+footer {
+  grid-row: 3; 
 }
