--- a/client/src/view/Favorites/Favorites.module.css
+++ b/client/src/view/Favorites/Favorites.module.css
@@ -1,4 +1,20 @@
 .padre{
-  margin-bottom: 400px;
   padding: 100px;
 }
+.selector{
+  padding: 5px;
+  margin-top: 0;
+  background-color: black;
+  border-radius: 6px;
+  color: white;
+  appearance: none;
+  scroll-behavior: smooth;
+}
+
+.option{
+  color: white;
+  background-color: black;
+  scroll-behavior: smooth;
+}
+
+
