--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -1,15 +1,25 @@
-.search{
-  width: 30px;
-  height: 30px;
-  background-color: #333; 
-  border-radius: 50%; 
+
+.search {
+  margin: 10px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 50%;
+  position: relative;
+  top: -5px;
 }
 
- 
-.search:before {
-  content: '\f002'; 
-  font-family: FontAwesome; 
-  color: #fff;
-  font-size: 18px; 
+.search:after {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: rgb(255, 255, 255);
+  display: block;
+  content: "";
+  top: 70%;
+  left: 80%;
+  transform: rotate(45deg);
+  transform-origin: -1px 8px;
+  
 }
-
