--- a/client/src/view/About/About.module.css
+++ b/client/src/view/About/About.module.css
@@ -1,6 +1,140 @@
-.padre{
-  margin-top: 30px;
+/* Agrega la clase portalContainer para aplicar el efecto de portal a ese contenedor */
+.portalContainer {
+  transform-style: preserve-3d;
+  perspective: 1500px;
+  animation: portalAnimation 1.5s ease-in-out;
 }
-.h2{
-  margin-bottom: 10px;
+
+
+/* Define la animación de portal */
+@keyframes portalAnimation {
+  0% {
+    transform: rotateY(90deg) scale(0.1);
+  }
+  100% {
+    transform: rotateY(0) scale(1);
+  }
+}
+
+/* Estilos existentes que no necesitas modificar */
+/* Elimina las clases centered y portalContainer */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: Verdana, sans-serif;
+}
+
+.background {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #00000000;
+
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: Verdana, sans-serif;
+}
+
+.flipCard {
+  perspective: 1000px;
+  width: 300px;
+  height: 450px;
+  margin-left: 0px;
+}
+
+.flipCard h2 {
+  color: #ffffff;
+}
+
+.flipCardInner {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+  text-align: center;
+}
+
+.flipCard:hover .flipCardInner {
+  transform: rotateY(180deg);
+}
+
+.flipCardFront,
+.flipCardBack {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.flipCardFront {
+  background-color: #2b2828af;
+  color: #353635;
+  z-index: 2;
+}
+
+.flipCardBack {
+  background-color: #0000009a;
+  color: #fff;
+  transform: rotateY(180deg);
+  z-index: 1;
+  margin-left: -25px;
+}
+
+.aboutContainer h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.perfilImg {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  margin-bottom: 20px;
+  box-shadow: none;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Estilos existentes que no necesitas modificar */
+.text {
+  font-size: 14px;
+}
+
+.socialLinks {
+    margin-top: 10px;
+}
+
+.logo {
+  width: 30px;
+  height: 30px;
+  margin: 0 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.logo:hover {
+  transform: scale(1.1);
 }
